# pyWikiCMS

./: .gitignore  .project  .travis.yml  404.html  AGENTS.md  README.md  forms.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run  setup.py
.github/workflows/: build.yml
backend/: backup.py  cron_backup.py  remote.py  server.py  site.py  sql_backup.py  tsite.py  wikibackup.py  wikis.py
docs/: index.md
docs/source/_build/doctrees/: frontend.doctree  index.doctree  setup.doctree
docs/source/_build/html/: .buildinfo  genindex.html  index.html  search.html  searchindex.js  tests.html
docs/source/_build/html/_modules/frontend/: family.html  webserver.html
docs/source/_build/html/_sources/: frontend.rst.txt
frontend/: WikiCMS.py  app.py  clickstream.py  cmsapp.py  cmsmain.py  family.py  flask_webserver.py  frame.py  generator.py  html_table.py  htmlfilter.py  mediawiki_site.py  resource_loader.py  server.py  servers_view.py  site.py  tsite.py  version.py  webscrape.py  webserver.py  widgets.py  wikicms.py  wikigrid.py  wikis_view.py
frontend/.nicegui/: storage-user-a07fa6c3-752d-470a-a4f6-9898b146e43b.json
frontend/forms/: __init__.py  form_field.py  handler.py  registry.py  renderer.py  validators.py
frontend/resources/: schema.yaml
frontend/resources/css/: bootstrap.css  hamburger_menu.css
frontend/resources/forms/: contact.yaml
frontend/resources/js/: bootstrap.js  hamburger_menu.js
scripts/: bg_loadclickstream.sh  blackisort  install  run
search/: search_index.json
source/: conf.py  index.rst
source/_build/doctrees/: environment.pickle  tests.doctree
source/_build/html/: frontend.html  objects.inv  py-modindex.html  setup.html
source/_build/html/_modules/: index.html
source/_build/html/_modules/frontend/: server.html  site.html  widgets.html  wikicms.html
source/_build/html/_modules/tests/: test_family.html  test_frontend.html  test_server.html  test_webserver.html  test_widgets.html  test_wikicms.html
source/_build/html/_sources/: tests.rst.txt
templates/: base.html  bootstrap.html  design.html  generator.html  index.html  macros.html  reveal.html  server.html  tableview.html  welcome.html
tests/: basetest.py  smw_access.py  test_WebServer.py  test_WikiCMS.py  test_clickstream.py  test_family.py  test_forms.py  test_frontend.py  test_generator.py  test_htmlfilter.py  test_mediawiki_site.py  test_parser.py  test_remote.py  test_server.py  test_site.py  test_sql.py  test_sqlbackup.py  test_webserver.py  test_widgets.py  test_wikibackup.py  test_wikicms.py  test_wikigrid.py  test_wikis.py
