# see https://flit.pypa.io/en/latest/pyproject_toml.html
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyWikiCMS"
description = "pyWikiCMS: python implementation of a Mediawiki based Content Management System"
home-page = "https://github.com/BITPlan/pyWikiCMS"
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@bitplan.com" },
]
readme = "README.md"
license = "Apache-2.0"
dependencies = [
	# https://github.com/justpy-org/justpy
    'justpy>=0.11.3',
    # https://pypi.org/project/pylodstorage/
    'pyLodStorage>=0.4.7',
    # https://pypi.org/project/pyJustpyWidgets/
    'pyJustpyWidgets>=0.1.11',
    # https://pypi.org/project/py-3rdparty-mediawiki/
    'py-3rdparty-mediawiki>=0.8.3',
    # Beautiful Soup HTML parser
	# https://pypi.org/project/beautifulsoup4/
	'beautifulsoup4>=4.9.3',
	#https://pypi.org/project/pydevd/
	'pydevd'
 ]

requires-python = ">=3.8"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version"]
[tool.hatch.version]
path = "frontend/__init__.py"

[project.urls]
Home = "https://github.com/BITPlan/pyWikiCMS"
Documentation = "https://wiki.bitplan.com/index.php/PyWikiCMS"
Source = "https://github.com/BITPlan/pyWikiCMS"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
packages = [
  "frontend",
]

[project.scripts]
wikicms = "frontend.cmsmain:main"
